--- a/Manasa.ipynb
+++ b/Manasa.ipynb
@@ -2014,6 +2014,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "id": "073253d3-af62-4759-af50-bc9c60fe08b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age                int64\n",
+       "workclass         object\n",
+       "fnlwgt             int64\n",
+       "education         object\n",
+       "education-num      int64\n",
+       "marital-status    object\n",
+       "occupation        object\n",
+       "relationship      object\n",
+       "race              object\n",
+       "sex               object\n",
+       "capital-gain       int64\n",
+       "capital-loss       int64\n",
+       "hours-per-week     int64\n",
+       "native-country    object\n",
+       "income            object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04575cea-9b3f-4bc5-850e-cc7ca09aa72c",
+   "metadata": {},
+   "source": [
+    "Column Types:\n",
+    "Numerical: age,fnlwgt,education-num ,capital-gain,capital-loss,hoursperweek\n",
+    "\n",
+    "Categorical:\n",
+    "workclass(contain some special characters like - ? and blanks),\n",
+    "maritalstatus(contain sepcial characters like -),\n",
+    "occupation(contain special characters like - ? and blanks),\n",
+    "relationship(contain special characters like -),\n",
+    "race(contain special characters like -),\n",
+    "sex,\n",
+    "native-country(contain special characters like - ? () and blanks)\n",
+    "\n",
+    "Mixed:education,income"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "355296c7-5fda-4b7d-a2ff-a08002d96401",
    "metadata": {},
