Hypothesis table updated

--- a/Manasa.ipynb
+++ b/Manasa.ipynb
@@ -2,32 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "09752a27-557f-48e8-93fb-9473a4880722",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: ucimlrepo in c:\\users\\garin\\anaconda3\\lib\\site-packages (0.0.7)\n",
-      "Requirement already satisfied: pandas>=1.0.0 in c:\\users\\garin\\anaconda3\\lib\\site-packages (from ucimlrepo) (2.3.3)\n",
-      "Requirement already satisfied: certifi>=2020.12.5 in c:\\users\\garin\\anaconda3\\lib\\site-packages (from ucimlrepo) (2026.1.4)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\garin\\anaconda3\\lib\\site-packages (from pandas>=1.0.0->ucimlrepo) (2.3.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\garin\\appdata\\roaming\\python\\python313\\site-packages (from pandas>=1.0.0->ucimlrepo) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\garin\\anaconda3\\lib\\site-packages (from pandas>=1.0.0->ucimlrepo) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\garin\\anaconda3\\lib\\site-packages (from pandas>=1.0.0->ucimlrepo) (2025.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\garin\\appdata\\roaming\\python\\python313\\site-packages (from python-dateutil>=2.8.2->pandas>=1.0.0->ucimlrepo) (1.17.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install ucimlrepo"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "35ae4e54-2cb3-4742-9e5a-77d3d68bafb1",
    "metadata": {},
@@ -118,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "cc1dab2b-a48a-4076-8d5d-fa989e22d437",
    "metadata": {},
    "outputs": [],
@@ -128,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "2fed9cce-4297-40e6-aea1-aaae20dcd15a",
    "metadata": {},
    "outputs": [
@@ -418,7 +392,7 @@
        "[48842 rows x 14 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "d4b1cfa4-e27a-4a28-93dd-68433d122bfe",
    "metadata": {},
    "outputs": [],
@@ -545,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "fd857fd9-956d-480a-9443-2e33f4f7d34f",
    "metadata": {},
    "outputs": [
@@ -555,7 +529,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "7908cb49-5e54-4e32-b6df-05453af71172",
    "metadata": {},
    "outputs": [],
@@ -586,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "4cdd198d-c5b9-4bfd-8cd4-ad47647d14ce",
    "metadata": {},
    "outputs": [
@@ -888,7 +862,7 @@
        "[48842 rows x 15 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,8 +2063,300 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "67f3e56c-e53b-46b2-9768-62e90b2ab5fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>workclass</th>\n",
+       "      <th>fnlwgt</th>\n",
+       "      <th>education</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>marital-status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>capital-loss</th>\n",
+       "      <th>hours-per-week</th>\n",
+       "      <th>native-country</th>\n",
+       "      <th>income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14582</th>\n",
+       "      <td>35</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>187415</td>\n",
+       "      <td>5th-6th</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Machine-op-inspct</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>Asian-Pac-Islander</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>?</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       age workclass  fnlwgt education  education-num      marital-status  \\\n",
+       "14582   35   Private  187415   5th-6th              3  Married-civ-spouse   \n",
+       "\n",
+       "              occupation relationship                race   sex  capital-gain  \\\n",
+       "14582  Machine-op-inspct      Husband  Asian-Pac-Islander  Male             0   \n",
+       "\n",
+       "       capital-loss  hours-per-week native-country income  \n",
+       "14582             0              50              ?  <=50K  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "db4fb21c-2b27-46f8-83a1-fa8dd28aa59b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    ID                      Feature(s)                     Type  \\\n",
+      "0   H1    education-num (or education)    Numeric / Categorical   \n",
+      "1   H2                             age                  Numeric   \n",
+      "2   H3                  hours-per-week                  Numeric   \n",
+      "3   H4                    capital-gain                  Numeric   \n",
+      "4   H5                      occupation              Categorical   \n",
+      "5   H6                  marital-status              Categorical   \n",
+      "6   H7                       workclass              Categorical   \n",
+      "7   H8                             sex  Categorical (sensitive)   \n",
+      "8   H9                            race  Categorical (sensitive)   \n",
+      "9  H10  education-num × hours-per-week              Interaction   \n",
+      "\n",
+      "                                  Business intuition  \\\n",
+      "0  Higher education is linked to higher-paying oc...   \n",
+      "1  Income often rises with experience and seniority.   \n",
+      "2  More work hours often correspond to full-time/...   \n",
+      "3  Investment gains are more common among higher-...   \n",
+      "4  Different occupations have very different pay ...   \n",
+      "5  Marital status correlates with household struc...   \n",
+      "6  Employer type (private/government/self-employe...   \n",
+      "7  Historical wage gaps may be reflected in the d...   \n",
+      "8      Historical inequities may appear in outcomes.   \n",
+      "9  Extra hours may pay off more in higher-skill r...   \n",
+      "\n",
+      "                                           H0 (null)  \\\n",
+      "0    Income class is independent of education level.   \n",
+      "1                Income class is independent of age.   \n",
+      "2  Income class is independent of hours worked pe...   \n",
+      "3       Income class is independent of capital-gain.   \n",
+      "4  Income class distribution is the same across o...   \n",
+      "5  Income class distribution is the same across m...   \n",
+      "6  Income class distribution is the same across w...   \n",
+      "7  Income class distribution is the same across s...   \n",
+      "8  Income class distribution is the same across r...   \n",
+      "9  No interaction: the effect of hours-per-week d...   \n",
+      "\n",
+      "                                    H1 (alternative)  \\\n",
+      "0  Higher education level increases the likelihoo...   \n",
+      "1  Higher age is associated with higher likelihoo...   \n",
+      "2  More hours-per-week increases the likelihood o...   \n",
+      "3  Higher (or non-zero) capital-gain increases li...   \n",
+      "4   Income class distribution differs by occupation.   \n",
+      "5  Income class distribution differs by marital-s...   \n",
+      "6    Income class distribution differs by workclass.   \n",
+      "7  Income class distribution differs across sex c...   \n",
+      "8  Income class distribution differs across race ...   \n",
+      "9  Interaction exists: the effect of hours-per-we...   \n",
+      "\n",
+      "                      How to test (EDA / stats / ML)  \\\n",
+      "0  Compare >50K rate by education; trend vs educa...   \n",
+      "1  Plot >50K rate by age bins; t-test/KS test on ...   \n",
+      "2  Boxplots by class; compare means/medians; fit ...   \n",
+      "3  Compare >50K rate for capital-gain=0 vs >0; lo...   \n",
+      "4  Bar chart of >50K rate by occupation; chi-squa...   \n",
+      "5  Bar chart of >50K rate by marital-status; chi-...   \n",
+      "6  Bar chart of >50K rate by workclass; chi-squar...   \n",
+      "7  Compare >50K rates by sex; chi-square; fairnes...   \n",
+      "8  Compare >50K rates by race; chi-square; fairne...   \n",
+      "9  Fit logistic with interaction term; compare AU...   \n",
+      "\n",
+      "                      Expected direction  \n",
+      "0                                      +  \n",
+      "1                                      +  \n",
+      "2                                      +  \n",
+      "3                             + (strong)  \n",
+      "4                     Varies by category  \n",
+      "5                     Varies by category  \n",
+      "6                     Varies by category  \n",
+      "7        Difference expected (bias risk)  \n",
+      "8        Difference expected (bias risk)  \n",
+      "9  Stronger + effect at higher education  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Build a clean hypothesis table (null/alternative) for the Adult Income dataset\n",
+    "import pandas as pd\n",
+    "\n",
+    "hypothesis_rows = [\n",
+    "    {\n",
+    "        \"ID\": \"H1\",\n",
+    "        \"Feature(s)\": \"education-num (or education)\",\n",
+    "        \"Type\": \"Numeric / Categorical\",\n",
+    "        \"Business intuition\": \"Higher education is linked to higher-paying occupations and wages.\",\n",
+    "        \"H0 (null)\": \"Income class is independent of education level.\",\n",
+    "        \"H1 (alternative)\": \"Higher education level increases the likelihood of income >50K.\",\n",
+    "        \"How to test (EDA / stats / ML)\": \"Compare >50K rate by education; trend vs education-num; chi-square for education; logistic coef / SHAP for direction.\",\n",
+    "        \"Expected direction\": \"+\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"ID\": \"H2\",\n",
+    "        \"Feature(s)\": \"age\",\n",
+    "        \"Type\": \"Numeric\",\n",
+    "        \"Business intuition\": \"Income often rises with experience and seniority.\",\n",
+    "        \"H0 (null)\": \"Income class is independent of age.\",\n",
+    "        \"H1 (alternative)\": \"Higher age is associated with higher likelihood of income >50K.\",\n",
+    "        \"How to test (EDA / stats / ML)\": \"Plot >50K rate by age bins; t-test/KS test on age by class; model partial dependence.\",\n",
+    "        \"Expected direction\": \"+\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"ID\": \"H3\",\n",
+    "        \"Feature(s)\": \"hours-per-week\",\n",
+    "        \"Type\": \"Numeric\",\n",
+    "        \"Business intuition\": \"More work hours often correspond to full-time/professional roles.\",\n",
+    "        \"H0 (null)\": \"Income class is independent of hours worked per week.\",\n",
+    "        \"H1 (alternative)\": \"More hours-per-week increases the likelihood of income >50K.\",\n",
+    "        \"How to test (EDA / stats / ML)\": \"Boxplots by class; compare means/medians; fit logistic with hours; check monotonic pattern.\",\n",
+    "        \"Expected direction\": \"+\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"ID\": \"H4\",\n",
+    "        \"Feature(s)\": \"capital-gain\",\n",
+    "        \"Type\": \"Numeric\",\n",
+    "        \"Business intuition\": \"Investment gains are more common among higher-income individuals.\",\n",
+    "        \"H0 (null)\": \"Income class is independent of capital-gain.\",\n",
+    "        \"H1 (alternative)\": \"Higher (or non-zero) capital-gain increases likelihood of income >50K.\",\n",
+    "        \"How to test (EDA / stats / ML)\": \"Compare >50K rate for capital-gain=0 vs >0; log-transform then compare; model importance.\",\n",
+    "        \"Expected direction\": \"+ (strong)\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"ID\": \"H5\",\n",
+    "        \"Feature(s)\": \"occupation\",\n",
+    "        \"Type\": \"Categorical\",\n",
+    "        \"Business intuition\": \"Different occupations have very different pay scales.\",\n",
+    "        \"H0 (null)\": \"Income class distribution is the same across occupations.\",\n",
+    "        \"H1 (alternative)\": \"Income class distribution differs by occupation.\",\n",
+    "        \"How to test (EDA / stats / ML)\": \"Bar chart of >50K rate by occupation; chi-square test; model coefficients per category.\",\n",
+    "        \"Expected direction\": \"Varies by category\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"ID\": \"H6\",\n",
+    "        \"Feature(s)\": \"marital-status\",\n",
+    "        \"Type\": \"Categorical\",\n",
+    "        \"Business intuition\": \"Marital status correlates with household structure, age, and earnings.\",\n",
+    "        \"H0 (null)\": \"Income class distribution is the same across marital-status categories.\",\n",
+    "        \"H1 (alternative)\": \"Income class distribution differs by marital-status.\",\n",
+    "        \"How to test (EDA / stats / ML)\": \"Bar chart of >50K rate by marital-status; chi-square; check model category effects.\",\n",
+    "        \"Expected direction\": \"Varies by category\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"ID\": \"H7\",\n",
+    "        \"Feature(s)\": \"workclass\",\n",
+    "        \"Type\": \"Categorical\",\n",
+    "        \"Business intuition\": \"Employer type (private/government/self-employed) can affect pay bands.\",\n",
+    "        \"H0 (null)\": \"Income class distribution is the same across workclass.\",\n",
+    "        \"H1 (alternative)\": \"Income class distribution differs by workclass.\",\n",
+    "        \"How to test (EDA / stats / ML)\": \"Bar chart of >50K rate by workclass; chi-square; model category weights.\",\n",
+    "        \"Expected direction\": \"Varies by category\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"ID\": \"H8\",\n",
+    "        \"Feature(s)\": \"sex\",\n",
+    "        \"Type\": \"Categorical (sensitive)\",\n",
+    "        \"Business intuition\": \"Historical wage gaps may be reflected in the data.\",\n",
+    "        \"H0 (null)\": \"Income class distribution is the same across sex categories.\",\n",
+    "        \"H1 (alternative)\": \"Income class distribution differs across sex categories.\",\n",
+    "        \"How to test (EDA / stats / ML)\": \"Compare >50K rates by sex; chi-square; fairness metrics (TPR/FPR parity) after modeling.\",\n",
+    "        \"Expected direction\": \"Difference expected (bias risk)\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"ID\": \"H9\",\n",
+    "        \"Feature(s)\": \"race\",\n",
+    "        \"Type\": \"Categorical (sensitive)\",\n",
+    "        \"Business intuition\": \"Historical inequities may appear in outcomes.\",\n",
+    "        \"H0 (null)\": \"Income class distribution is the same across race categories.\",\n",
+    "        \"H1 (alternative)\": \"Income class distribution differs across race categories.\",\n",
+    "        \"How to test (EDA / stats / ML)\": \"Compare >50K rates by race; chi-square; fairness checks on model errors by group.\",\n",
+    "        \"Expected direction\": \"Difference expected (bias risk)\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"ID\": \"H10\",\n",
+    "        \"Feature(s)\": \"education-num × hours-per-week\",\n",
+    "        \"Type\": \"Interaction\",\n",
+    "        \"Business intuition\": \"Extra hours may pay off more in higher-skill roles.\",\n",
+    "        \"H0 (null)\": \"No interaction: the effect of hours-per-week does not change with education.\",\n",
+    "        \"H1 (alternative)\": \"Interaction exists: the effect of hours-per-week on >50K probability depends on education.\",\n",
+    "        \"How to test (EDA / stats / ML)\": \"Fit logistic with interaction term; compare AUC/F1; plot partial dependence for hours at different education levels.\",\n",
+    "        \"Expected direction\": \"Stronger + effect at higher education\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "hypothesis_table_df = pd.DataFrame(hypothesis_rows)\n",
+    "print(hypothesis_table_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a9f3f4f3-2c6e-42d9-99ad-2694999f1808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hypothesis_table_df.to_csv(\"Hypothesis_statements.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "402d40f9-cbd5-4d4a-8a8d-c0d53fdc0ba9",
    "metadata": {},
    "outputs": [],
    "source": []
